--- a/FlaskWebProject/templates/weightOpt.html
+++ b/FlaskWebProject/templates/weightOpt.html
@@ -6,18 +6,21 @@
 <h3>{{ message }}</h3>
 
 <div id="myDiv" style="width: 480px; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>
+<script src="/static/scripts/jquery-1.10.2.js"></script>
 <script>
-    var trace1 = {
-        x: [1, 2, 3, 4],
-        y: [10, 15, 13, 17],
-        type: 'scatter'
-    };
-    var trace2 = {
-        x: [1, 2, 3, 4],
-        y: [16, 5, 11, 9],
-        type: 'scatter'
-    };
-    var data = [trace1, trace2];
-    Plotly.newPlot('myDiv', data);
+    (function () {
+        var url = "http://wsf-web-app.azurewebsites.net/weightOptApi";
+        $.getJSON(url)
+          .done(function (data) {
+              var trace1 = {
+                  x: data.xval,
+                  y: data.yval,
+                  type: 'scatter'
+              };
+              var plot = [trace1];
+              Plotly.newPlot('myDiv', plot);
+          });
+    })();
+
 </script>
 {% endblock %}
