Attempting to add CORS support

--- a/FlaskWebProject/templates/weightOpt.html
+++ b/FlaskWebProject/templates/weightOpt.html
@@ -9,7 +9,7 @@
 <script src="/static/scripts/jquery-1.10.2.js"></script>
 <script>
     (function () {
-        var url = "http://wsf-web-app.azurewebsites.net/weightOptApi";
+        var url = "http://wsf-web-app.azurewebsites.net/api/v1/weightOptApi";
         $.getJSON(url)
           .done(function (data) {
               var trace1 = {
