--- a/FlaskWebProject/templates/weightOpt.html
+++ b/FlaskWebProject/templates/weightOpt.html
@@ -5,7 +5,41 @@
 <h2>{{ title }}.</h2>
 <h3>{{ message }}</h3>
 
-<div id="myDiv" style="width: 480px; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>
+<div class="row">
+    <div id="myDiv" style="width: 600px; height: 600px;" class="col-md-8"><!-- Plotly chart will be drawn inside this DIV --></div>
+    <form class="form-horizontal col-md-4 form-wt-opt">
+        <div class="col-sm-12">
+            <h2 class="text-center">Input Fields</h2>
+        </div>
+        <div class="form-group">
+            <label for="basePrice" class="control-label col-sm-6">Base Price</label>
+            <div class="col-sm-2"></div>
+            <div class="input-group col-sm-4">
+                <div class="input-group-addon">$</div>
+                <input type="number" class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="barnSize" class="control-label col-sm-6">Barn Size</label>
+            <div class="col-sm-2"></div>
+            <div class="input-group col-sm-4">
+                <input type="number" class="form-control" style="border-radius:4px" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="deathPer" class="control-label col-sm-6">Death Percentage</label>
+            <div class="col-sm-2"></div>
+            <div class="input-group col-sm-4">
+                <input type="number" class="form-control" />
+                <div class="input-group-addon">%</div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-8"></div>
+            <button type="submit" class="btn btn-primary col-sm-4"><strong>Recalculate</strong></button>
+        </div>
+    </form>
+</div>
 <script>
     (function () {
         var url = "http://wsf-web-app.azurewebsites.net/api/v1/weightOptApi";
@@ -17,7 +51,18 @@
                   type: 'scatter'
               };
               var plot = [trace1];
-              Plotly.newPlot('myDiv', plot);
+              var layout = {
+                  title: 'Optimal Live Weight Curve',
+                  xaxis: {
+                      title: 'Avg Group Live Wt (lbs)',
+                      t0: data.xval[0],
+                      dtick: 5
+                  },
+                  yaxis: {
+                      title: 'Revenue Less Deaths, Feed, & Rent ($)'
+                  }
+              }
+              Plotly.newPlot('myDiv', plot, layout);
           });
     })();
 
