--- a/FlaskWebProject/templates/weightOpt.html
+++ b/FlaskWebProject/templates/weightOpt.html
@@ -7,64 +7,73 @@
 
 <div class="row">
     <div id="myDiv" style="width: 600px; height: 600px;" class="col-md-8"><!-- Plotly chart will be drawn inside this DIV --></div>
-    <form class="form-horizontal col-md-4 form-wt-opt">
+    <form class="form-horizontal col-md-4 form-wt-opt" id="frmWeightOpt">
         <div class="col-sm-12">
             <h2 class="text-center">Input Fields</h2>
         </div>
         <div class="form-group">
-            <label for="basePrice" class="control-label col-sm-6">Base Price</label>
+            <label for="inpBasePrice" class="control-label col-sm-6">Base Price</label>
             <div class="col-sm-2"></div>
             <div class="input-group col-sm-4">
                 <div class="input-group-addon">$</div>
-                <input type="number" class="form-control" />
+                <input type="number" class="form-control" id="inpBasePrice" name="base_price" />
             </div>
         </div>
         <div class="form-group">
-            <label for="barnSize" class="control-label col-sm-6">Barn Size</label>
+            <label for="inpBarnSize" class="control-label col-sm-6">Barn Size</label>
             <div class="col-sm-2"></div>
             <div class="input-group col-sm-4">
-                <input type="number" class="form-control" style="border-radius:4px" />
+                <input type="number" class="form-control" style="border-radius:4px" id="inpBarnSize" name="barn_size"/>
             </div>
         </div>
         <div class="form-group">
-            <label for="deathPer" class="control-label col-sm-6">Death Percentage</label>
+            <label for="inpDeathPer" class="control-label col-sm-6">Death Percentage</label>
             <div class="col-sm-2"></div>
             <div class="input-group col-sm-4">
-                <input type="number" class="form-control" />
+                <input type="number" class="form-control" id="inpDeathPer" name="death_per"/>
                 <div class="input-group-addon">%</div>
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-8"></div>
-            <button type="submit" class="btn btn-primary col-sm-4"><strong>Recalculate</strong></button>
+            <button type="button" class="btn btn-primary col-sm-4" id="recalculate"><strong>Recalculate</strong></button>
         </div>
     </form>
 </div>
 <script>
-    (function () {
-        var url = "http://wsf-web-app.azurewebsites.net/api/v1/weightOptApi";
-        $.getJSON(url)
-          .done(function (data) {
-              var trace1 = {
-                  x: data.xval,
-                  y: data.yval,
-                  type: 'scatter'
-              };
-              var plot = [trace1];
-              var layout = {
-                  title: 'Optimal Live Weight Curve',
-                  xaxis: {
-                      title: 'Avg Group Live Wt (lbs)',
-                      t0: data.xval[0],
-                      dtick: 5
-                  },
-                  yaxis: {
-                      title: 'Revenue Less Deaths, Feed, & Rent ($)'
-                  }
-              }
-              Plotly.newPlot('myDiv', plot, layout);
-          });
-    })();
+    $("#recalculate").click(function () {
+        var param = $("#frmWeightOpt").serialize();
+        generatePlot(param);
+    });
 
+    function generatePlot(param) {
+        if (param === null) { 
+            param = "";
+        }
+        var url = "http://wsf-web-app.azurewebsites.net/api/v1/weightOptApi";
+        url = url + "?" + param;
+        $.getJSON(url).done(function (data) {
+            var trace1 = {
+                x: data.xval,
+                y: data.yval,
+                type: 'scatter'
+            };
+            var plot = [trace1];
+            var layout = {
+                title: 'Optimal Live Weight Curve',
+                xaxis: {
+                    title: 'Avg Group Live Wt (lbs)',
+                    t0: data.xval[0],
+                    dtick: 5
+                },
+                yaxis: {
+                    title: 'Revenue Less Deaths, Feed, & Rent ($)'
+                }
+            };
+            Plotly.newPlot('myDiv', plot, layout);
+        });
+    }
+    generatePlot();
 </script>
+
 {% endblock %}
