touched up previous commit

--- a/FlaskWebProject/templates/weightOpt.html
+++ b/FlaskWebProject/templates/weightOpt.html
@@ -47,7 +47,7 @@
     });
 
     function generatePlot(param) {
-        if (param === null) { 
+        if (typeof param === undefined) { 
             param = "";
         }
         var url = "http://wsf-web-app.azurewebsites.net/api/v1/weightOptApi";
