--- a/FlaskWebProject/templates/layout.html
+++ b/FlaskWebProject/templates/layout.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} - My Flask Application</title>
     <link rel="stylesheet" type="text/css" href="/static/content/bootstrap-3.3.6.min.css" />
+    <link rel="stylesheet" type="text/css" href="/static/content/formValidation-0.7.1.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/content/site.css" />
+
     <script src="/static/scripts/jquery-2.2.1.min.js"></script>
     <script src="/static/scripts/bootstrap-3.3.6.min.js"></script>
+    <script src="/static/scripts/formValidation-0.7.1.min.js"></script>
+    <script src="/static/scripts/bootstrap-fv-0.7.1.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 
