--- a/FlaskWebProject/templates/weightOpt.html
+++ b/FlaskWebProject/templates/weightOpt.html
@@ -16,7 +16,7 @@
             <div class="col-xs-1"></div>
             <div class="input-group col-xs-4">
                 <div class="input-group-addon">$</div>
-                <input type="number" class="form-control" id="inpBasePrice" name="base_price" value="80.00" />
+                <input type="text" class="form-control" id="inpBasePrice" name="base_price" value="80.00" />
             </div>
             <div class="col-xs-1"></div>
         </div>
@@ -25,7 +25,7 @@
             <div class="col-xs-1"></div>
             <div class="input-group col-xs-4">
                 <div class="input-group-addon">$</div>
-                <input type="number" class="form-control" id="inpRent" name="rent" value="1940" />
+                <input type="text" class="form-control" id="inpRent" name="rent" value="1940" />
             </div>
             <div class="col-xs-1"></div>
         </div>
@@ -33,7 +33,7 @@
             <label for="inpWeeks" class="control-label col-xs-6">Weeks in Barn</label>
             <div class="col-xs-1"></div>
             <div class="input-group col-xs-4">
-                <input type="number" class="form-control" style="border-radius:4px" id="inpWeeks" name="weeks" value="24.5" />
+                <input type="text" class="form-control" style="border-radius:4px" id="inpWeeks" name="weeks" value="24.5" />
             </div>
             <div class="col-xs-1"></div>
         </div>
@@ -41,7 +41,7 @@
             <label for="inpBarnSize" class="control-label col-xs-6">Barn Size</label>
             <div class="col-xs-1"></div>
             <div class="input-group col-xs-4">
-                <input type="number" class="form-control" style="border-radius:4px" id="inpBarnSize" name="barn_size" value="2500"/>
+                <input type="text" class="form-control" style="border-radius:4px" id="inpBarnSize" name="barn_size" value="2500"/>
             </div>
             <div class="col-xs-1"></div>
         </div>
@@ -49,7 +49,7 @@
             <label for="inpDeathPer" class="control-label col-xs-6">Death Percentage</label>
             <div class="col-xs-1"></div>
             <div class="input-group col-xs-4">
-                <input type="number" class="form-control" id="inpDeathPer" name="death_per" value="4.00"/>
+                <input type="text" class="form-control" id="inpDeathPer" name="death_per" value="4.00"/>
                 <div class="input-group-addon">%</div>
             </div>
             <div class="col-xs-1"></div>
@@ -58,7 +58,7 @@
             <label for="inpDiscountPer" class="control-label col-xs-6">Discount Percentage</label>
             <div class="col-xs-1"></div>
             <div class="input-group col-xs-4">
-                <input type="number" class="form-control" id="inpDiscountPer" name="discount_per" value="1.00" />
+                <input type="text" class="form-control" id="inpDiscountPer" name="discount_per" value="1.00" />
                 <div class="input-group-addon">%</div>
             </div>
             <div class="col-xs-1"></div>
@@ -71,6 +71,113 @@
     </form>
 </div>
 <script>
+    $(document).ready(function () {
+        $("#frmWeightOpt").formValidation({
+            framework: "bootstrap",
+            fields: {
+                base_price: {
+                    validators: {
+                        notEmpty: {
+                            message: "Base Price is required"
+                        },
+                        numeric: {
+                            message: "Base Price must be a number",
+                            decimalSeparator: "."
+                        },
+                        between: {
+                            min: 0,
+                            max: 200,
+                            message: "Base Price must be between %s and %s"
+                        }
+                    }
+                },
+                rent: {
+                    validators: {
+                        notEmpty: {
+                                message: "Rent is required"
+                        },
+                        numeric: {
+                            message: "Rent must be a number",
+                            decimalSeparator: "."
+                        },
+                        between: {
+                            min: 0,
+                            max: 50000,
+                            message: "Rent must be between %s and %s"
+                        }
+                    }
+                },
+                weeks: {
+                    validators: {
+                        notEmpty: {
+                            message: "Weeks in Barn is required"
+                        },
+                        numeric: {
+                            message: "Weeks in Barn must be a number",
+                            decimalSeparator: "."
+                        },
+                        between: {
+                            min: 0,
+                            max: 40,
+                            message: "Weeks in Barn must be between %s and %s"
+                        }
+                    }
+                },
+                barn_size: {
+                    validators: {
+                            notEmpty: {
+                                message: "Barn Size is required"
+                            },
+                        numeric: {
+                            message: "Barn Size must be a number"
+                        },
+                        between: {
+                            min: 0,
+                            max: 10000,
+                            message: "Barn Size must be between %s and %s"
+                        }
+                    }
+                },
+                death_per: {
+                    validators: {
+                        notEmpty: {
+                            message: "Death Percentage is required"
+                        },
+                        numeric: {
+                            message: "Death Percentage must be a number",
+                            decimalSeparator: "."
+                        },
+                        between: {
+                            min: 0,
+                            max: 100,
+                            message: "Death Percentage must be between %s and %s"
+                        }
+                    }
+                },
+                discount_per: {
+                    validators: {
+                        notEmpty: {
+                            message: "Discount Percentage is required"
+                        },
+                        numeric: {
+                            message: "Discount Percentage must be a number",
+                            decimalSeparator: "."
+                        },
+                        between: {
+                            min: 0,
+                            max: 100,
+                            message: "Discount Percentage must be between %s and %s"
+                        }
+                    }
+                }
+            }
+        });
+    });
+
+    $("input").blur(function () {
+        $(this).parent().parent().removeClass("has-success")
+    });
+
     $("#recalculate").click(function () {
         generatePlot();
     });
