--- a/FlaskWebProject/static/content/site.css
+++ b/FlaskWebProject/static/content/site.css
@@ -30,6 +30,26 @@ textarea {
     text-decoration: none;
 }
 
+.table > tbody > tr > th,
+.table > thead > tr > th {
+    text-align: center;
+    vertical-align: middle;
+}
+
+#frmFeed .has-feedback .form-control {
+    padding-right: 12px;
+    margin: 0 auto;
+}
+
+.inp-price {
+    width: 105px;
+    text-align: center;
+}
+
+.inp-wt {
+    text-align: center;
+}
+
 /* styles for validation helpers */
 /*.field-validation-error {
     color: #b94a48;
