--- a/FlaskWebProject/templates/layout.html
+++ b/FlaskWebProject/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }} - My Flask Application</title>
+    <title>{{ title }}</title>
     <link rel="stylesheet" type="text/css" href="/static/content/bootstrap-3.3.6.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/content/formValidation-0.7.1.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/content/site.css" />
@@ -24,13 +24,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand">Application name</a>
+                <a href="/" class="navbar-brand">WSF</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('home') }}">Home</a></li>
-                    <li><a href="{{ url_for('about') }}">About</a></li>
-                    <li><a href="{{ url_for('contact') }}">Contact</a></li>
                     <li><a href="{{ url_for('weightOpt') }}">Weight Analysis</a></li>
                 </ul>
             </div>
