Altered url call to weightOptApi from weightOpt.html

--- a/FlaskWebProject/templates/weightOpt.html
+++ b/FlaskWebProject/templates/weightOpt.html
@@ -493,9 +493,7 @@
 
     function generatePlot() {
         var url = "http://wsf-web-app.azurewebsites.net/api/v1/weightOptApi";
-        url = url + "?" + $("#frmWeightOpt").serialize();
-        console.log($("#frmWeightOpt").serialize());
-        console.log($("#frmFeed").serialize());
+        url = url + "?" + $("#frmWeightOpt").serialize() + "&" + $("#frmFeed").serialize();
         
         $.getJSON(url).done(function (data) {
             var d3 = Plotly.d3;
